--- a/sass/app.scss
+++ b/sass/app.scss
@@ -7,49 +7,7 @@
   box-sizing: border-box;
 }
 
+@import './gutenberg-config';
 @import './node_modules/gutenberg-web-type/src/style/gutenberg.scss';
 @import 'solarized';
-
-$edit-mode: true; // [ true / false ] - Enables/disables the grid toggle button.
-$theme: Merriweather; // [ Merriweather / OpenSans / custom ]
-$custom-font-body: null !default; // [ "Libre Baskerville", Georgia, serif ]
-$custom-font-headings: null !default;
-
-$paragraph-indent: false; // [ true / false ]
-$base-font-size: 100 !default;
-$base-font-size-desktop: 112.5 !default;
-$line-height: 1.625;
-$line-height-desktop: 1.7;
-$max-width: 35;
-
-$base: 16 * ($base-font-size / 100);
-$leading: round($base * $line-height);
-$leading-rem: $leading / $base;
-
-$color-font-body: #222;
-$color-font-headings: $color-font-body;
-$color-font-light: #888;
-$color-font-figcaption: $color-font-light;
-
-$color-link-normal: $color-font-body;
-$color-link-hover: $color-font-body;
-$color-link-active: #f00;
-$color-link-visited: $color-font-light;
-
-$headings: (
-  h1: (2.5, 2, 4, 1),
-  h2: (1.6875, 1.5, 2.5, .5),
-  h3: (1.375, 1, 2, .5),
-  h4: (1.2, 1, 1.5, .5),
-  h5: (1, 1, 2.5, .5),
-  h6: (1, 1, 2.5, .5)
-) !default;
-
-$hr-style: type; // [ line / type ]
-$hr-type-content: '***'; // [ '***' ]
-$hr-type-char-spacing: .2em; // [ 0.2em ]
-$hr-margin: 2;
-$hr-margin-desktop: $hr-margin;
-$hr-color: $color-font-body;
-$hr-width: 100; // [ 100 ] — In pixels, only for line style
-$hr-height: 4; // [ 2 ] — In pixels, only for line style
+@import './gutenberg';
