--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-          ga('create', {{ config.extra.google_analytics }}, 'auto');
+          ga('create', "{{ config.extra.google_analytics }}", 'auto');
           ga('send', 'pageview');
 
         </script>
