improve sass design

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -7,7 +7,11 @@
   box-sizing: border-box;
 }
 
+@import 'solarized';
+@import 'variables';
+@import 'responsive';
+@import 'base';
+@import 'layout';
 @import './gutenberg-config';
 @import './node_modules/gutenberg-web-type/src/style/gutenberg.scss';
-@import 'solarized';
 @import './gutenberg';
