--- a/sass/solarized.scss
+++ b/sass/solarized.scss
@@ -15,26 +15,26 @@ $blue:      #268bd2;
 $cyan:      #2aa198;
 $green:     #859900;
 
-@mixin accentize($accent, $base) {
-    a, a:active, a:visited, code.url { color: $accent; }
-    h1,h2,h3,h4,h5,h6 {color:$accent}
+@mixin accentize($base) {
+    a, a:active, a:visited, code.url { color: $yellow; }
+    h1,h2,h3,h4,h5,h6 {color:$green}
     ::selection {
-      background-color: $accent;
+      background-color: $magenta;
       color:$base;
     }
 }
-@mixin rebase($rebase03,$rebase02,$rebase01,$rebase00,$rebase0,$rebase1,$rebase2,$rebase3,$accent) {
+@mixin rebase($rebase03,$rebase02,$rebase01,$rebase00,$rebase0,$rebase1,$rebase2,$rebase3) {
     background-color:$rebase03;
     color:$rebase0;
     * { color:$rebase0; }
     h1,h2,h3,h4,h5,h6 { color:$rebase1; border-color: $rebase0; }
     //a, a:active, a:visited { color: $rebase1; }
-    @include accentize($accent, $rebase3);
+    @include accentize($rebase02);
 }
 
 /* light is default mode, so pair with general html definition */
-html, .light { @include rebase($base3,$base2,$base1,$base0,$base00,$base01,$base02,$base03,$green)}
-.dark  { @include rebase($base03,$base02,$base01,$base00,$base0,$base1,$base2,$base3,$green)}
+html, .light { @include rebase($base3,$base2,$base1,$base0,$base00,$base01,$base02,$base03)}
+.dark  { @include rebase($base03,$base02,$base01,$base00,$base0,$base1,$base2,$base3)}
 html * {
     color-profile: sRGB;
     rendering-intent: auto;
